# ingest_core

./: .coverage  .env.example  .gitignore  DEPENDENCY_ANALYSIS.md  Explanaition_of_ingest_core.md  README.md  TESTING.md  demo.py  pyproject.toml  pytest.ini  requirements.txt  requirements_frozen.txt  test_local_ingestion.py
.github/workflows/: tests.yml
analyzer/: __init__.py  base.py  phash.py
analyzers/: __init__.py  exif.py  objects.py  phash.py  vlm.py
api/: __init__.py  app.py
config/: __init__.py  settings.py
container/: __init__.py  container.py
database/: __init__.py  mongodb.py  qdrant.py  sqlite.py
ingest_core/adapters/: __init__.py  base.py  flux.py  flux_examples.py  kling.py
ingest_core/analyzers/: __init__.py  base.py  exif.py  objects.py  phash.py  vlm.py
ingest_core/api/: __init__.py  app.py  dependencies.py  schemas.py
ingest_core/api/routes/: __init__.py  analysis.py  assets.py  health.py  lineage.py  pipeline.py  prompts.py  search.py
ingest_core/config/: __init__.py  flux_settings.py  settings.py
ingest_core/container/: __init__.py  container.py
ingest_core/database/: faiss_db.py  mongodb.py  qdrant.py  sqlite.py
ingest_core/models/: __init__.py  analysis.py  asset_3d.py  generation.py  image.py  lineage.py  prompt_schema.py  prompt_template.py  video.py  video_prompt.py
ingest_core/playground/: test_bfl.py
ingest_core/playground/prompt_creator/: technical_drawing_prompt_schema.py  test_gemini_prompt_creator.py
ingest_core/processors/: __init__.py  asset_3d.py  base.py  image.py  video.py
ingest_core/services/: __init__.py  asset.py  flux_generator.py  ingestion.py  lineage.py  prompt_compiler.py  prompt_generator.py
ingest_core/storage/: base.py  factory.py  gcs.py  local.py
models/: __init__.py  asset.py  asset_3d.py  image.py  video.py
processor/: asset_3d.py  base.py  image.py  video.py
processors/: __init__.py  asset_3d.py  image.py  video.py
service/: __init__.py  asset.py  ingestion.py
services/: __init__.py  asset.py  ingestion.py
storage/: base.py  factory.py  gcs.py  local.py
tests/: README.md  __init__.py  conftest.py  test_adapters.py  test_analyzers.py  test_api.py  test_config.py  test_integration.py  test_models.py  test_processors.py  test_services.py  test_storage.py  utils.py
tests/structured_prompts/: test_structured_prompts.py
